--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-security-2v</name>
     <description>spring-security-2v</description>
+
     <properties>
         <java.version>17</java.version>
+        <mysql.connector.version>8.0.31</mysql.connector.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -29,11 +32,20 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.connector.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
