--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/spring-security-2v
-spring.datasource.name=root
-spring.datasource.password=qwer1234
+spring.datasource.name=mixai
+spring.datasource.password=mka_mixai
