--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/spring-security-2v
 spring.datasource.name=mixai
 spring.datasource.password=mka_mixai
+
+jwt.header=Authorization
+jwt.secret=proselyte
+jwt.expiration=604800
